[#6] 카드팩 뷰 navigationBar + BottomSheet 구현

--- a/Cardna-iOS/Cardna-iOS/Info.plist
+++ b/Cardna-iOS/Cardna-iOS/Info.plist
@@ -4,9 +4,9 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Pretendard-Light</string>
-		<string>Pretendard-Regular</string>
-		<string>Pretendard-SemiBold</string>
+		<string>Pretendard-Light.otf</string>
+		<string>Pretendard-Regular.otf</string>
+		<string>Pretendard-SemiBold.otf</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
