--- a/Cardna-iOS/Cardna-iOS/Info.plist
+++ b/Cardna-iOS/Cardna-iOS/Info.plist
@@ -24,7 +24,7 @@
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
-					<string>Main</string>
+					<string>Initial</string>
 				</dict>
 			</array>
 		</dict>
